# kan-trial

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: 0.0-b-spline-curves.ipynb  0.0-b-spline.ipynb  0.0-spline.ipynb  1.0-kan.ipynb
reports/: 0.0-b-spline-curves.md  0.0-b-spline.md  0.0-spline.md  1.0-kan.md
